--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.1.0",
     "jest": "^29.3.1",
     "typescript": "^4.9.4"
   },
