--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
-    "eslint": "^7.11.0",
-    "jest": "^26.5.3",
-    "typescript": "^4.0.3"
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^26.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "eslint": "^7.10.0",
+    "jest": "^26.4.2",
+    "typescript": "^4.2.3"
   },
   "volta": {
-    "node": "12.19.0",
-    "yarn": "3.3.0"
+    "node": "12.18.4",
+    "yarn": "1.22.10"
   }
 }
